<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2019, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>18</version>
        <relativePath/>
    </parent>
    <artifactId>powsybl-hpc</artifactId>
    <version>3.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>powsybl HPC</name>
    <description>C++ and Java modules for high performance computing</description>
    <url>http://www.powsybl.com</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-hpc.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-hpc.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-hpc</url>
    </scm>

    <developers>
        <developer>
            <name>Mathieu BAGUE</name>
            <email>mathieu.bague@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Geoffroy JAMGOTCHIAN</name>
            <email>geoffroy.jamgotchian@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>computation-mpi</module>
        <module>computation-slurm</module>
        <module>computation-slurm-test</module>
        <module>distribution-hpc</module>
    </modules>

    <properties>
        <java.version>17</java.version>

        <commonsexec.version>1.4.0</commonsexec.version>
        <jsch.version>0.2.16</jsch.version>
        <jsch.extension.version>0.1.11</jsch.extension.version>
        <jsch.nio.version>1.0.14</jsch.nio.version>
        <junit-jupiter.version>5.10.1</junit-jupiter.version>
        <logback.version>1.4.14</logback.version>
        <mockito.version>5.10.0</mockito.version>
        <protobuf.version>3.25.3</protobuf.version>

        <sonar.coverage.jacoco.xmlReportPaths>
            ../distribution-hpc/target/site/jacoco-aggregate/jacoco.xml,
            ../../distribution-hpc/target/site/jacoco-aggregate/jacoco.xml,
        </sonar.coverage.jacoco.xmlReportPaths>

        <powsyblcore.version>6.2.2</powsyblcore.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- import dependency management from powsybl-core -->
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-core</artifactId>
                <version>${powsyblcore.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Compile dependencies -->
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.mwiede</groupId>
                <artifactId>jsch</artifactId>
                <version>${jsch.version}</version>
            </dependency>
            <dependency>
                <groupId>com.pastdev</groupId>
                <artifactId>jsch-extension</artifactId>
                <version>${jsch.extension.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.jcraft</groupId>
                        <artifactId>jsch</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.pastdev</groupId>
                <artifactId>jsch-nio</artifactId>
                <version>${jsch.nio.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-commons</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-computation</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-computation-local</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-tools</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-exec</artifactId>
                <version>${commonsexec.version}</version>
            </dependency>

            <!-- Runtime dependencies -->

            <!-- Test dependencies -->
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
